# akvutil

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  justfile  release-plz.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  pin-check.yml  release-plz.yml  release.yml
docs/runbooks/: README.md  constraints.md  premium-to-standard.md  standard-to-premium.md  vault-to-managed-hsm.md
docs/superpowers/plans/: 2026-07-09-search-and-create-expansion.md
docs/superpowers/specs/: 2026-07-09-search-and-create-expansion-design.md
src/: arm.rs  auth.rs  keys.rs  locations.rs  main.rs  output.rs  search.rs  timespec.rs  vault.rs
