[package]
name = "akvutil"
version = "0.3.1"
edition = "2021"
rust-version = "1.88"
description = "Azure Key Vault utility: create/migrate vaults and keys, discover resources that use them"
license = "MIT"

[dependencies]
# Azure SDK for Rust (GA 1.0, verified on crates.io 2026-07)
azure_core = "1.0"
azure_identity = "1.0"
azure_security_keyvault_keys = "1.0"

clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
percent-encoding = "2"

[profile.release]
lto = true
strip = true
